# sgr-discount-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
scripts/: __init__.py  setup_data.py
sgr/: __init__.py  agent.py
sgr/config/: __init__.py  constants.py
sgr/models/: __init__.py  schemas.py
sgr/prompts/: __init__.py  pricing.py  routing.py
sgr/store/: __init__.py  hybrid_store.py
sgr/store/sql/: get_analytics.sql  get_session.sql  insert_analytics.sql  insert_session.sql  setup_duckdb.sql  setup_sqlite.sql
sgr/utils/: __init__.py  json_utils.py  llm_client.py
