[project]
name = "sgr-discount-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "sqlfluff>=3.5.0",
]
